fixed email alignment and page links

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body > header > nav > ul {
 #championRoles{
     text-align: center;
 }
+
+#MyEmail{
+    text-align: center;
+}
 .navbutton{
     color: white;
     text-decoration: none;
